# RandomCoffeTelegram

./: .env_example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: update_docker_image.yaml
.github/worrkflows/: update_docker_image.yaml
app/: .dockerignore  Dockerfile  cli.py  config.py  filters.py  logger.py  main.py  requirements.txt
app/choice/: test_main.py
app/db/: __init__.py  migrate.py  migrate.sql  models.py
app/src/: __init__.py  admin.py  auth.py  matching.py  middlewares.py
